@@ -1,3 +1,10 @@
+20040626
+ - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2004/06/25 18:43:36
+     [sshd.c]
+     fix broken fd handling in the re-exec fallback path, particularly when
+     /dev/crypto is in use; ok deraadt@ markus@
+
 20040625
  - (dtucker) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2004/06/24 19:30:54
@@ -1423,4 +1430,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3450 2004/06/25 07:06:02 dtucker Exp $
+$Id: ChangeLog,v 1.3451 2004/06/25 22:16:31 djm Exp $
